--- a/src/main/resources/com/example/tarea_1/main.fxml
+++ b/src/main/resources/com/example/tarea_1/main.fxml
@@ -3,30 +3,17 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <VBox alignment="TOP_RIGHT" prefHeight="423.0" prefWidth="913.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tarea_1.Controller">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <MenuBar prefHeight="26.0" prefWidth="130.0">
-     <menus>
-       <Menu mnemonicParsing="false" text="File">
-         <items>
-           <MenuItem mnemonicParsing="false" text="Close" />
-         </items>
-       </Menu>
-       <Menu mnemonicParsing="false" text="Edit">
-         <items>
-           <MenuItem mnemonicParsing="false" text="Delete" />
-         </items>
-       </Menu>
-       <Menu mnemonicParsing="false" text="Help">
-         <items>
-           <MenuItem mnemonicParsing="false" text="About" />
-         </items>
-       </Menu>
-     </menus>
-   </MenuBar>
+   <Button alignment="TOP_CENTER" mnemonicParsing="false" onMouseClicked="#getAbrir" text="Abrir" textAlignment="CENTER">
+      <font>
+         <Font size="13.0" />
+      </font>
+   </Button>
    <TableView prefHeight="340.0" prefWidth="833.0">
      <columns>
        <TableColumn prefWidth="58.19997787475586" text="Carnet" />
@@ -39,7 +26,7 @@
          <TableColumn prefWidth="68.0" text="NotaPQ" />
          <TableColumn prefWidth="68.4000244140625" text="NotaPT" />
          <TableColumn prefWidth="71.5999755859375" text="P1" />
-         <TableColumn prefWidth="72.5999755859375" text="P2" />
+         <TableColumn prefWidth="72.5999755859375" text="P20" />
          <TableColumn prefWidth="92.199951171875" text="P3" />
      </columns>
    </TableView>
